# blog.rs

./: Cargo.toml  README.md
config/: development.yaml  test.yaml
frontend/src/: index.css
handlers/: posts.rs
src/: app.rs  app.txt  filters.rs  lib.rs
src/controllers/: mod.rs  post.rs  posts_html.rs
src/fixtures/: users.yaml
src/models/: posts.rs
src/views/: auth.rs  mod.rs  posts.rs
static/: login.html  login_system.html  style.css
templates/posts/: form.html  index.html  show.html  style.css
tests/: mod.rs
tests/models/: mod.rs
