[workspace]

[package]
name = "blog_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

loco-rs = { version = "0.1.8" }
migration = { path = "migration" }
tower-http = { version = "0.6", features = ["fs"] }  # 追加

#redis = "1.0.0" # または最新の安定版 
#rusty-sidekiq = "0.13.2" # 最新バージョン 
#sqlx = { version = "0.8", features = ["postgres"] } # sqlx-postgresの代わりに

#askama_axum = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
tokio = { version = "1.33.0", default-features = false }
async-trait = "0.1.75"
tracing = "0.1.40"
chrono = "0.4"
validator = { version = "0.16" }
sea-orm = { version = "0.12.4", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }

axum = "0.7.2"
include_dir = "0.7"
uuid = { version = "1.6.0", features = ["v4"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
askama = "0.14.0"
urlencoding = "2.1.3"
pulldown-cmark = "0.13.0"

[[bin]]
name = "blog_rs-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
serial_test = "2.0.0"
rstest = "0.18.2"
loco-rs = { version = "0.1.8", features = ["testing"] }
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
